--- a/.env
+++ b/.env
@@ -1,24 +1,24 @@
 # Contact details
-OWNER_NOMER=2348109263390
+OWNER_NOMER=233544482494
 YT_NAME=YT: @EliteProTech
 SOCIAL_M=GitHub: EliteProTech
-LOCATION=Nigeria, Port Harcourt
+LOCATION=Ghana, Obuasi
 
 # Creator details
-OWNER_NUMBER=2348109263390
-OWNER_NAME=ElitePro
-BOT_NAME=ELITE-PRO-V1
+OWNER_NUMBER=233544482494
+OWNER_NAME=Official OnePesewa
+BOT_NAME=OP-MD
 
 # Default settings
 PREFIX=!,.,#,&
 AUTO_RECORDING=false
 AUTO_TYPING=false
 AUTO_RECORD_TYPE=false
-AUTO_READ=false
+AUTO_READ=true
 AUTO_BIO=true
 ANTI_92=false
 AUTO_SW_VIEW=true
-WELCOME=true
+WELCOME=false
 AUTO_REACT=false
 AUTO_LIKE_STATUS=true
 
